--- a/src/components/Nav/Nav.css
+++ b/src/components/Nav/Nav.css
@@ -13,3 +13,10 @@
 .profileImg, .logout {
     padding: 1.7em;
 }
+
+.name {
+    font-size: 1.8em;
+    font-weight: 600;
+    color: black;
+    text-decoration: none;
+}
